# karaage

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  .gitreview  .mergify.yml  .readthedocs.yml  .tool-versions  .travis.yml  AUTHORS  AUTHORS.txt  CHANGELOG.md  CHANGES.rst  Dockerfile  Dockerfile.apache  MANIFEST.in  Makefile  Pipfile  README  README.rst  VERSION.txt  context_processors.py  dev_settings.py  docker-compose.yml  ds389tests  flake.nix  flake8-diff.py  flake8.py  manage.py  package-lock.json  package.json  pylint.conf  pyproject.toml  pyproject.toml.org  pytest.ini  release  requirements-docs.txt  requirements-tests.txt  requirements-usage.txt  requirements.txt  (+7 more)
.circleci/: config.yml
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  osv-scanner.yml  pythonapp.yml  release-please.yml
cache/: admin.py  models.py
conf/: 000-default.conf  global_settings.py  karaage-2.2.conf  karaage-2.4.conf  karaage.wsgi  karaage3-wsgi.conf  ldap_schemas.py  models.py  ports.conf  settings.py
datastores/: __init__.py  base.py  dummy.py  files.py  ldap_datastore.py
debian/: .gitignore  NEWS  changelog  clean  config  control  copyright  dirs  gbp.conf  karaage3-apache.postinst  karaage3-apache.prerm  karaage3-celery.default  karaage3-celery.dirs  karaage3-celery.init  karaage3-celery.logrotate  karaage3-celery.postinst  karaage3-celery.postrm  karaage3-common.NEWS  karaage3-common.dirs  karaage3-common.install  karaage3-common.logrotate  karaage3-common.postinst  karaage3-common.postrm  karaage3-database.cron.d  karaage3-database.lintian-overrides  karaage3-database.postinst  karaage3-database.templates  karaage3-database.triggers  karaage3-doc.doc-base  karaage3-doc.doc-base.admin  karaage3-doc.doc-base.programmer  karaage3-doc.docs  karaage3-wsgi.install  karaage3-wsgi.lintian-overrides  karaage3-wsgi.postinst  karaage3-wsgi.prerm  karaage3-wsgi.triggers  karaage3.config  karaage3.dirs  karaage3.logrotate  (+22 more)
debian/patches/: 0001-sphinx.patch  series  sphinx.patch
debian/po/: POTFILES.in  templates.pot
debian/upstream/: signing-key.asc
docker/: group  mysql.conf  passwd  start.sh  start_db.sh
docker/settings/: settings.py
docs/: Makefile  conf.py
docs/admin/: Advanced.rst  Architecture.rst  Features.rst  Home.rst  Installing.rst  ReleaseNotes.rst  Upgrading.rst  changes.rst  cluster.rst  cmd.rst  common_tasks.rst  conf.py  customizing.rst  datastores.rst  getting_started.rst  glossary.rst  index.rst  introduction.rst  plugins.rst  ref.rst  tasks.rst  trouble_shooting.rst  upgrading.rst
docs/ext/: djangodocs.py
docs/programmer/: Makefile  architecture.rst  conf.py  contributing.rst  glossary.rst  index.rst  plugins.rst  prepare.rst  releasing.rst  testing.rst
docs/source/: conf.py  index.rst
docs/user/: conf.orig.py  conf.py  index.rst  introduction.rst
emails/: admin.py  forms.py  models.py  urls.py  views.py
graphs/: __init__.py  base.py  gdchart2.py  matplotlib9.py  util.py
hooks/: build  push
institutes/: admin.py  managers.py  models.py  urls.py
institutes/urls/: admin.py
karaage/: .gitignore  __init__.py  __main__.py  apps.py  backends.py  backports.py  celery.py  cli.py  constants.py  context_processors.py  logging.py  models.py  plugins.py  saml.py  signals.py  tasks.py  urls.py  validators.py  views.py  wsgi.py
kgapplications/: __init__.py  emails.py  forms.py  models.py  signals.py  tables.py  urls.py
kgsoftware/: __init__.py  forms.py  models.py  tables.py  urls.py  views.py
kgusage/: __init__.py  alogger.py  apps.py  dirs.py  forms.py  graphs.py  models.py  plugins.py  signals.py  tables.py  tasks.py  urls.py  usage.py  views.py  xmlrpc.py
machines/: admin.py  forms.py  models.py  urls.py  views.py
middleware/: auth.py
pbsmoab/: admin.py  forms.py  logs.py  models.py  urls.py  views.py  xmlrpc.py
people/: admin.py  forms.py  managers.py  models.py  tests.py
projectreports/: admin.py  models.py
projects/: admin.py  forms.py  managers.py  models.py  tests.py  urls.py  util.py  views.py
requests/: admin.py  forms.py  models.py
requirements/: base.txt  docker.txt  docs.txt  tests.txt  usage.txt
sbin/: kg-daily-cleanup  kg-manage  kg-migrate-south  kg_set_secret_key
scripts/: build.sh  build_all.sh  cleanup.sh  copyright.sh  docker.sh  rpm-install.sh  rpm-post-install.sh  start.sh  test.sh
slurm/: Dockerfile
software/: admin.py  forms.py  models.py  urls.py
templates/: log_list.html  site_search.html
testproject/: .gitignore  initial_data.json  karaage_data.json  ldap_attrs.py  registration_urls.py  settings.py  urls.py
tests/: initial_ldap_data.py  manage.py  registration_urls.py  settings.py  test_applications.py  test_institutes.py  test_machines.py  test_people.py  test_projects.py  urls.py  util.py
tldap/: __init__.py  dict.py  dn.py  exceptions.py  fields.py  filter.py  ldap_passwd.py  modlist.py  query.py  query_utils.py  transaction.py  tree.py  utils.py
usage/: forms.py  models.py  urls.py  views.py
util/: email_messages.py  graphs.py  helpers.py  lists.py  usage.py
(+1810 files in other folders)
