[project]
name = "karaage"
version = "6.3.1"
description = "Web application to manage a HP cluster"
authors = [
    {name = "Brian May", email = "brian@linuxpenguins.xyz"},
]
license = {text = "GPL3+"}
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "bcrypt",
    "cssmin",
    "python-alogger",
    "django-simple-captcha",
    "django-ajax-selects",
    "ldap3",
    "python-tldap",
    "django-tables2",
    "django-filter",
    "django-environ",
    "six",
    "whitenoise",
    "Django>=4.1.2,<5.2.0",
    "cracklib",
    "gunicorn",
    "mysqlclient",
    "sentry-sdk",
    "psycopg2-binary",
    "pyjwt",
    "jsmin>=3.0.1",
    "django-tracking-model>=0.1.5",
]

[project.scripts]
kg-manage = "karaage.cli:manage"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.0.1",
    "pytest-cov<7.0,>=4.1",
    "flake8<8.0.0,>=7.0.0",
    "black>=25.1.0",
    "jedi-language-server>=0.44.0",
    "pylsp-mypy>=0.7.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.2",
    "mock>=5.2.0",
    "pytest-django>=4.10.0",
    "setuptools>=78.1.0",
    "factory-boy>=3.3.3",
]
docs = ["sphinx", "furo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["karaage"]
